feat: [WHERES-3043] iovalkey 지원을 위한 수정
- iovalkey 메트릭 수집

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ node_modules/
 jspm_packages/
 build/
 
+!plugins/node/opentelemetry-instrumentation-ioredis/build
+
 # TypeScript v1 declaration files
 typings/
 
